// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update migrate TuiInputDateRangeModule to TuiInputDateRange: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-range></tui-input-date-range>

                <tui-input-date-range
                    [formControl]="control"
                    [tuiTextfieldCleaner]="true"
                >
                    Choose a range
                    <input tuiTextfieldLegacy />
                </tui-input-date-range>

                <tui-input-date-range formControlName="range">
                    Pick date range
                </tui-input-date-range>

                <tui-input-date-range [(ngModel)]="value">
                    Date range
                </tui-input-date-range>
            ",
  "1. After": "
                <tui-textfield>
<input tuiInputDateRange />
<tui-calendar-range *tuiDropdown />
</tui-textfield>

                <tui-textfield
                    
                    [tuiTextfieldCleaner]="true"
                >
<label tuiLabel>
                    Choose a range
                    </label>
<input tuiInputDateRange [formControl]="control" />
                
<tui-calendar-range *tuiDropdown />
</tui-textfield>

                <tui-textfield >
<label tuiLabel>
                    Pick date range
                </label>

<input tuiInputDateRange formControlName="range" />
<tui-calendar-range *tuiDropdown />
</tui-textfield>

                <tui-textfield >
<label tuiLabel>
                    Date range
                </label>

<input tuiInputDateRange [(ngModel)]="value" />
<tui-calendar-range *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update migrate TuiInputDateRangeModule to TuiInputDateRange: test.ts 1`] = `
{
  "0. Before": "
                import {TuiInputDateRangeModule} from '@taiga-ui/legacy';

                @Component({
                  standalone: true,
                  imports: [TuiInputDateRangeModule],
                  templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
  "1. After": "import { TuiInputDateRange } from "@taiga-ui/kit";

                                @Component({
                  standalone: true,
                  imports: [TuiInputDateRange],
                  templateUrl: './test.html',
                })
                export class MyComponent {}
            ",
}
`;

exports[`ng-update moves [disabledItemHandler] and [markerHandler] to <tui-calendar-range *tuiDropdown>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-range
                    formControlName="range"
                    [disabledItemHandler]="disabledHandler"
                    [markerHandler]="markerHandler"
                >
                    Range
                </tui-input-date-range>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                    
                >
<label tuiLabel>
                    Range
                </label>

<input tuiInputDateRange formControlName="range" />
<tui-calendar-range *tuiDropdown [disabledItemHandler]="disabledHandler" [markerHandler]="markerHandler" />
</tui-textfield>
            ",
}
`;

exports[`ng-update moves [items] and [defaultViewedMonth] to <tui-calendar-range *tuiDropdown>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-range
                    formControlName="range"
                    [defaultViewedMonth]="initialMonth"
                    [items]="periods"
                >
                    Range
                </tui-input-date-range>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                    
                >
<label tuiLabel>
                    Range
                </label>

<input tuiInputDateRange formControlName="range" />
<tui-calendar-range *tuiDropdown [defaultViewedMonth]="initialMonth" [items]="periods" />
</tui-textfield>
            ",
}
`;

exports[`ng-update moves [min], [max], [minLength], [maxLength] to <input tuiInputDateRange>: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-range
                    formControlName="range"
                    [max]="maxDate"
                    [maxLength]="{month: 1}"
                    [min]="minDate"
                    [minLength]="{day: 3}"
                >
                    Range
                </tui-input-date-range>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                    
                    
                    
                >
<label tuiLabel>
                    Range
                </label>

<input tuiInputDateRange formControlName="range" [max]="maxDate" [maxLength]="{month: 1}" [min]="minDate" [minLength]="{day: 3}" />
<tui-calendar-range *tuiDropdown />
</tui-textfield>
            ",
}
`;

exports[`ng-update removes [tuiTextfieldLabelOutside] from tui-input-date-range: test.html 1`] = `
{
  "0. Before": "
                <tui-input-date-range
                    [formControl]="control"
                    [tuiTextfieldLabelOutside]="true"
                >
                    Choose a range
                </tui-input-date-range>
            ",
  "1. After": "
                <tui-textfield
                    
                    
                >
<label tuiLabel>
                    Choose a range
                </label>

<input tuiInputDateRange [formControl]="control" />
<tui-calendar-range *tuiDropdown />
</tui-textfield>
            ",
}
`;
